# quad_platforms

./: README.md  package.xml  setup.py
quad_platforms/: __init__.py  platform_interface.py  setup.cfg
quad_platforms/vehicles/: __init__.py
quad_platforms/vehicles/gz_x500/: __init__.py  platform.py
quad_platforms/vehicles/holybro_x500V2/: __init__.py  platform.py  thrust_throttle_conversion.py
